objects/LLC_BI__Dimension_Group__c.object
<CustomObject>
    <description>This object stores the discrete dimensions used in a particular matrix and the associated values.</description>
    <fields>
        <fullName>LLC_BI__Dimension__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Administrators populate this required lookup field to associate the dimension group to a dimension. By default, the value is blank.</description>
        <inlineHelpText>Select the associated dimension.</inlineHelpText>
        <label>Dimension</label>
        <referenceTo>LLC_BI__Dimension__c</referenceTo>
        <relationshipLabel>Dimension Groups</relationshipLabel>
        <relationshipName>Dimension_Groups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Group_Values__c</fullName>
        <description>Administrators populate this required text field with the values contained in the dimension group. By default, the value is blank.</description>
        <inlineHelpText>Enter the group values.</inlineHelpText>
        <label>Group Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dimension Group</label>
    <nameField>
        <label>Dimension Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dimension Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>